[package]
name = "poetry-resolver"
version = "0.1.0"
authors = ["Jonas Bulik <jonas@bulik.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pubgrub = "0.2.0"
regex = "1"
lazy_static = "1.4.0"
thiserror = "1.0"
reqwest =  { version = "0.10.9", features = ["blocking", "json"] }
serde =  { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
pyo3 = { version = "0.12.3", features = ["extension-module"] }

[lib]
crate-type = ["cdylib", "rlib"]
